--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.4"
+    "sass": "^1.49.4",
+    "underscore": "^1.13.2"
   },
   "devDependencies": {
     "eslint": "8.8.0",
