--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
+    "axios": "^0.25.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
