--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "personal-website",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.3.1",
-    "axios": "^0.25.0",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "sass": "^1.49.4",
-    "underscore": "^1.13.2"
-  },
-  "devDependencies": {
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
-  }
+    "name": "personal-website",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.17",
+        "@material-ui/icons": "^4.11.2",
+        "@mui/icons-material": "^5.3.1",
+        "axios": "^0.25.0",
+        "next": "12.0.10",
+        "pathseg": "^1.2.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-icons": "^4.3.1",
+        "react-tsparticles": "^1.40.0",
+        "sass": "^1.49.4",
+        "underscore": "^1.13.2"
+    },
+    "devDependencies": {
+        "eslint": "8.8.0",
+        "eslint-config-next": "12.0.10"
+    }
 }
