--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "personal-website",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next",
         "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
+        "start": "next start -p $PORT",
+        "heroku-postbuild": "npm run build",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "@emotion/react": "^11.7.1",
