--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
         "react-tsparticles": "^1.40.0",
+        "react-zdog": "^1.0.11",
         "sass": "^1.49.4",
-        "underscore": "^1.13.2"
+        "underscore": "^1.13.2",
+        "zdog": "^1.1.3"
     },
     "devDependencies": {
         "eslint": "8.8.0",
