--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "zdog": "^1.1.3"
     },
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
         "eslint": "8.8.0",
         "eslint-config-next": "12.0.10"
     }
