--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "@babel/eslint-parser": "^7.17.0",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
