--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,11 @@
 {
   "extends": [
-    "next"
+    "airbnb",
+    "prettier"
   ],
-  "parser": "@babel/eslint-parser"
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": "off",
+    "react/prop-types": "off"
+  }
 }
