--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     },
     "devDependencies": {
         "eslint": "8.8.0",
-        "eslint-config-next": "12.0.10"
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-next": "12.0.10",
+        "eslint-config-prettier": "^8.4.0",
+        "prettier": "2.5.1",
+        "prettier-eslint": "^13.0.0"
     }
 }
