--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,9 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
+    "no-undef": "off",
+    "react/button-has-type": "off"
   }
 }
