--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "no-undef": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "import/prefer-default-export": "off"
   }
 }
