--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,20 @@
 {
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
 	"extends": [
-		"plugin:react/recommended",
-		"airbnb",
-		"prettier",
-		"plugin:import/errors",
-		"plugin:import/warnings",
-		"plugin:import/typescript",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"next",
+		"next/core-web-vitals",
+		"prettier"
 	],
-	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
 		"react/react-in-jsx-scope": 0,
 		"no-nested-ternary": 0,
 		"react/require-default-props": 0,
 		"no-alert": 0,
-		"no-console": 2,
+		"no-console": "warn",
 		"import/prefer-default-export": 0,
 		"@typescript-eslint/no-explicit-any": 0,
 		"import/extensions": 0,
@@ -32,5 +32,14 @@
 		"react/no-unescaped-entities": 0,
 		"no-case-declarations": 0,
 		"no-restricted-exports": 0
-	}
+	},
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"plugins": ["@typescript-eslint"]
 }
