--- a/package.json
+++ b/package.json
@@ -9,21 +9,17 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"autoprefixer": "^10.4.7",
 		"next": "12.1.6",
-		"postcss": "^8.4.14",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
-		"react-icons": "^4.4.0",
-		"react-tsparticles": "^2.0.6",
-		"tailwindcss": "^3.0.24",
-		"tsparticles": "^2.0.6"
+		"react-icons": "^4.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.40",
 		"@types/react": "18.0.12",
 		"@types/react-dom": "18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"autoprefixer": "^10.4.12",
 		"eslint": "8.17.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-next": "12.1.6",
@@ -33,8 +29,10 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.30.0",
 		"eslint-plugin-react-hooks": "^4.5.0",
+		"postcss": "^8.4.17",
 		"postcss-preset-env": "^7.7.1",
 		"prettier": "^2.6.2",
+		"tailwindcss": "^3.1.8",
 		"typescript": "4.7.3"
 	}
 }
