--- a/.eslintrc
+++ b/.eslintrc
@@ -25,13 +25,14 @@
 		"no-use-before-define": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
 		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["error"],
+		"@typescript-eslint/no-unused-vars": "warn",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"react/no-array-index-key": 0,
 		"jsx-a11y/anchor-is-valid": 0,
 		"react/no-unescaped-entities": 0,
 		"no-case-declarations": 0,
-		"no-restricted-exports": 0
+		"no-restricted-exports": 0,
+		"@next/next/no-img-element": 0
 	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
