--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
 		"no-use-before-define": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
 		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": "warn",
+		"@typescript-eslint/no-unused-vars": "off",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"react/no-array-index-key": 0,
 		"jsx-a11y/anchor-is-valid": 0,
