--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"animate.css": "^4.1.1",
 		"next": "12.1.6",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.4.0",
+		"react-transition-group": "^4.4.5",
 		"sass": "^1.57.1"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.40",
 		"@types/react": "18.0.12",
 		"@types/react-dom": "18.0.5",
+		"@types/react-transition-group": "^4.4.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"autoprefixer": "^10.4.12",
 		"eslint": "8.17.0",
