--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-dom": "18.1.0",
 		"react-icons": "^4.4.0",
 		"react-transition-group": "^4.4.5",
+		"recoil": "^0.7.7",
 		"sass": "^1.57.1"
 	},
 	"devDependencies": {
