--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
-	"name": "personal-website",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"animate.css": "^4.1.1",
-		"next": "12.1.6",
-		"react": "18.1.0",
-		"react-dom": "18.1.0",
-		"react-icons": "^4.4.0",
-		"react-transition-group": "^4.4.5",
-		"recoil": "^0.7.7",
-		"sass": "^1.57.1"
-	},
-	"devDependencies": {
-		"@types/node": "17.0.40",
-		"@types/react": "18.0.12",
-		"@types/react-dom": "18.0.5",
-		"@types/react-transition-group": "^4.4.5",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"autoprefixer": "^10.4.12",
-		"eslint": "8.17.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-next": "12.1.6",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.30.0",
-		"eslint-plugin-react-hooks": "^4.5.0",
-		"postcss": "^8.4.17",
-		"postcss-preset-env": "^7.7.1",
-		"prettier": "^2.6.2",
-		"tailwindcss": "^3.1.8",
-		"typescript": "4.7.3"
-	}
+  "name": "personal-website",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/react-fontawesome": "^1.6.8"
+  }
 }
