--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"cross-spawn": "^7.0.5",
+		"postcss": "^8.4.31",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-scripts": "5.0.1",
