--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
+		"buffer": "^6.0.3",
 		"cross-spawn": "^7.0.5",
+		"gray-matter": "^4.0.3",
 		"postcss": "^8.4.31",
 		"react": "^18.3.1",
+		"react-app-rewired": "^2.2.1",
 		"react-dom": "^18.3.1",
+		"react-markdown": "^10.1.0",
+		"react-router-dom": "6.20.0",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.4.2",
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
