--- a/package.json
+++ b/package.json
@@ -2,49 +2,43 @@
 	"name": "personal-website",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "eslint src --ext ts,tsx",
+		"format": "prettier --write \"src/**/*.{ts,tsx}\""
+	},
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^13.0.0",
-		"@testing-library/user-event": "^13.2.1",
-		"@types/jest": "^27.0.1",
-		"@types/node": "^16.7.13",
-		"@types/react": "^18.0.0",
-		"@types/react-dom": "^18.0.0",
 		"buffer": "^6.0.3",
 		"cross-spawn": "^7.0.5",
 		"gray-matter": "^4.0.3",
-		"postcss": "^8.4.31",
 		"react": "^18.3.1",
-		"react-app-rewired": "^2.2.1",
 		"react-dom": "^18.3.1",
 		"react-markdown": "^10.1.0",
-		"react-router-dom": "6.20.0",
-		"react-scripts": "5.0.1",
-		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
+		"react-router-dom": "^6.22.3",
+		"web-vitals": "^3.5.2"
 	},
-	"scripts": {
-		"start": "react-app-rewired start",
-		"build": "react-app-rewired build",
-		"test": "react-app-rewired test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.1",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20.11.20",
+		"@types/react": "^18.2.58",
+		"@types/react-dom": "^18.2.19",
+		"@typescript-eslint/eslint-plugin": "^7.1.0",
+		"@typescript-eslint/parser": "^7.1.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"postcss": "^8.4.35",
+		"prettier": "^3.2.5",
+		"typescript": "^5.3.3",
+		"vite": "^5.1.4",
+		"vitest": "^1.2.1"
 	}
 }
