Migrate to material ui.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
 		"format": "prettier --write \"src/**/*.{ts,tsx}\""
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@fontsource/darker-grotesque": "^5.2.5",
+		"@fontsource/ibm-plex-mono": "^5.2.5",
+		"@fontsource/ibm-plex-sans": "^5.2.5",
+		"@fontsource/michroma": "^5.2.5",
+		"@fontsource/raleway": "^5.2.5",
+		"@mui/icons-material": "^7.0.2",
+		"@mui/material": "^7.0.2",
 		"buffer": "^6.0.3",
 		"cross-spawn": "^7.0.5",
 		"gray-matter": "^4.0.3",
