--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@fontsource/raleway": "^5.2.5",
 		"@mui/icons-material": "^7.0.2",
 		"@mui/material": "^7.0.2",
+		"@vercel/analytics": "^1.5.0",
 		"buffer": "^6.0.3",
 		"cross-spawn": "^7.0.5",
 		"gray-matter": "^4.0.3",
