--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,13 @@ dist
 build
 dist-ssr
 
+# Next.js
+.next/
+out/
+
+# Vercel
+.vercel
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
