--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"lint": "eslint src --ext ts,tsx",
+		"dev": "next dev --turbopack",
+		"build": "next build --turbopack",
+		"start": "next start",
+		"lint": "next lint",
 		"format": "prettier --write \"src/**/*.{ts,tsx}\""
 	},
 	"dependencies": {
@@ -24,8 +24,9 @@
 		"buffer": "^6.0.3",
 		"cross-spawn": "^7.0.5",
 		"gray-matter": "^4.0.3",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"next": "^15.5.3",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
 		"react-markdown": "^10.1.0",
 		"react-router-dom": "^6.22.3",
 		"web-vitals": "^3.5.2"
@@ -40,15 +41,12 @@
 		"@types/react-dom": "^18.2.19",
 		"@typescript-eslint/eslint-plugin": "^7.1.0",
 		"@typescript-eslint/parser": "^7.1.0",
-		"@vitejs/plugin-react": "^4.2.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"postcss": "^8.4.35",
 		"prettier": "^3.2.5",
-		"typescript": "^5.3.3",
-		"vite": "^5.1.4",
-		"vitest": "^1.2.1"
+		"typescript": "^5.3.3"
 	}
 }
