Fix Vercel deployment: use standard Next.js build with .next directory
- Remove custom distDir and output: 'export'
- Use standard next build (no static export)
- Remove vercel.json to use Vercel's auto-detection
- Keep Turbopack for development only
- This ensures routes-manifest.json is generated correctly

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ lerna-debug.log*
 node_modules
 .pnp
 .pnp.js
+package-lock.json
 
 # Testing
 coverage
@@ -20,7 +21,6 @@ coverage
 
 # Production
 dist
-build
 dist-ssr
 
 # Next.js
